--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -241,16 +241,17 @@
 
       <div class="col-md-3 item_icon">
         <div style="display: flex; justify-content: center;">
-          <div class="div_icon" *ngIf="item.status == 1 && item.role == 1">
+          <!-- <div class="div_icon" *ngIf="item.status == 1 && item.role == 1"> -->
+          <div class="div_icon" *ngIf="(item.status == 1 || item.status == 0) && item.role == 1">
             <button type="button" class="btn btn-outline-dark btn_submit" (click)="openCoordinatorContract(item.contractId)">Điều phối</button>
           </div>
-          <div class="div_icon" *ngIf="item.status == 1 && item.role == 2">
+          <div class="div_icon" *ngIf="(item.status == 1 || item.status == 0) && item.role == 2">
             <button type="button" class="btn btn-outline-dark btn_submit" (click)="openConsiderContract(item)">Xem xét</button>
           </div>
-          <div class="div_icon" *ngIf="item.status == 1 && item.role == 3">
+          <div class="div_icon" *ngIf="(item.status == 1 || item.status == 0) && item.role == 3">
             <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSignatureContract(item)">Ký</button>
           </div>
-          <div class="div_icon" *ngIf="item.status == 1 && item.role == 4">
+          <div class="div_icon" *ngIf="(item.status == 1 || item.status == 0) && item.role == 4">
             <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item.contractId)">Văn thư</button>
           </div>
         </div>
