--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -48,7 +48,7 @@
         <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">Luồng xử lý hợp đồng</u>
       </div>
       <hr>
-      <div class="flex-column">
+      <div class="flex-column" *ngIf="!view">
         <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 2">
           <p class="d-flex justify-content-center mb-4">XEM XÉT HỢP ĐỒNG</p>
           <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý xem xét hợp đồng không?</p>
@@ -86,7 +86,7 @@
 
   <!--  file content-->
   <!--  width: 74.7%-->
-  <div class="col-md-9 sample-contract__file viewer-pdf isDrag"
+  <div class="col-md-9 sample-contract__file viewer-pdf isDrag" *ngIf="!view"
        style="background-color: #F2F2F2; position: relative;">
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
@@ -98,10 +98,10 @@
              [ngClass]="changeColorDrag(null,true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
-          <app-image-sign-contract [datas]="datas" [sign]="d"></app-image-sign-contract>
+          <app-image-sign-contract [datas]="datas" [view]="view" [sign]="d"></app-image-sign-contract>
         </div>
       </div>
     </div>
   </div>
 </div>
-<app-footer-signature *ngIf="loaded" [datas]="datas" (submitChanges)="submitEvents($event)"></app-footer-signature>
+<app-footer-signature *ngIf="loaded" [datas]="datas" [view]="view" (submitChanges)="submitEvents($event)"></app-footer-signature>
