--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -88,7 +88,7 @@
               <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
                 <label style="color: #333; font-weight: normal;"
                   [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                  {{getContractConnectItems[id].ref_name}}
+                  {{getContractConnectItems[id].name}}
                 </label>
               </div>
             </ng-template>
@@ -131,6 +131,11 @@
           <ngx-datepicker [(ngModel)]="sign_time" [options]="options" class="date-picker input-text"></ngx-datepicker>
           <img src="assets/img/db_calendar.svg" alt="mobifone.contract" class="input-img">
         </div>
+      </div>
+      <div class="form-group">
+        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorSignTime!=''">
+          {{errorSignTime}}
+        </p>
       </div>
     </div>
   </div>
