--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -1,1 +1,17 @@
-<p>user works!</p>
+<div style="text-transform: uppercase;">Thông tin cá nhân</div>
+<div style="border: 1px solid #87CAFF;">
+  <div class="row">
+    <div class="col-md-3">
+      <div>Họ và tên</div>
+      <div>
+        <input />
+      </div>
+    </div>
+    <div class="col-md-3">
+
+    </div>
+    <div class="col-md-3">
+
+    </div>
+  </div>
+</div>
